# ffeorm

./: Makefile  README.md  pyproject.toml
src/: main.py
src/ffeorm/: ffeorm.py
src/ffeorm/types/: __init__.py  database_description.py  entity_settings.py
src/ffeorm/utils/: __init__.py  entity_parser.py  singleton_meta.py
tests/unit_tests/ffeorm/decorators/: entity_test.py
